syntax = "proto3";

package bc.exchange;

import "core.proto";

message HelpResponse {
    string help_text = 1;
}

message StatsResponse {
    int64 calls = 1;
    uint64 latest_gpu_miner_update = 2;
}

message RpcTransaction {
    string from_addr = 1;
    string to_addr = 2;
    string amount = 3;
    string tx_fee = 4;
    string private_key_hex = 5;
}

enum FeedTransactionDataType {
    TYPE1 = 0; // this is here as a placeholder, can be removed when types are decided
}

message RpcFeedTransactionRequest {
    string owner_addr = 1;
    string feed_addr = 2;
    FeedTransactionDataType data_type = 3;
    uint64 data_length = 4;
    string data = 5;
    string amount = 6;
    string tx_fee = 7;
    string tx_part = 8;
    string tx_panel = 9;
    string tx_nonce = 10;
    string minimum_distance = 11;
    string private_key_hex = 12;
}

message RpcUpdateFeedTransactionRequest {
    string owner_addr = 1;
    string feed_addr = 2;
    string sender_addr = 3;
    FeedTransactionDataType data_type = 4;
    uint64 data_length = 5;
    string data = 6;
    string amount = 7;
    string tx_fee = 8;
    string tx_panel = 9;
    string tx_part = 10;
    string tx_nonce = 11;
    string minimum_distance = 12;
    string private_key_hex = 13;
}

enum RpcTransactionResponseStatus {
    Success = 0;
    Failure = 1;
}

message RpcTransactionResponse {
    RpcTransactionResponseStatus  status    = 1;
    string  tx_hash   = 2;
    string  error     = 3;
}

message Transfer{
    string from = 1;
    string to = 2;
    string amount = 3;
    string tx_hash = 4;
    uint32 tx_output_index = 5;
    uint64 timestamp = 6;
    uint64 height = 7;
}

message TransferRequest {
    string address = 1;
    uint32 max = 2;
    string from = 3;
}

message GetHistoryRequest {
    string from = 1;
    uint64 max = 2;
}

message TransferResponse {
    repeated Transfer transfers = 1;
    string from = 2;
    string to = 3;
}

message GetUtxoLengthRequest{
    string script_type = 1;
    string address = 2;
}

message GetUtxosRequest{
    string script_type = 1;
    string address = 2;
    string from = 3;
    string to = 4;
}

message GetUtxoLengthResponse{
    uint32 length = 1;
}

message GetSpendableCollateralRequest {
    string address = 1;
    uint32 from = 2;
    uint32 to = 3;
}

message GetSpendableCollateralResponse {
    repeated core.OutPoint outpoints = 1;
}

message GetBalanceRequest {
    string address = 1;
}

message GetEmbBalanceResponse {
    string balance = 1;
}

message GetByteFeeResponse {
    string fee = 1;
}

message GetBalanceResponse {
    uint32 height = 1;
    string confirmed = 2;
    string unconfirmed = 3;
    string collateralized = 4;
    string unlockable = 5;
}

message GetUnlockTakerTxParamsRequest {
  string tx_hash = 1;
  uint32 tx_output_index = 2;
}

message GetUnlockTakerTxParamsResponse {
  repeated string unlock_scripts = 1;
  bytes value_in_tx = 2;
}

message MakerOrderInfo {
    uint64  trade_height = 1;
    uint64  deposit = 2;
    uint64  settlement = 3;
    uint64  shift_maker = 4;
    uint64  shift_taker = 5;
    string  sends_from_chain = 6;
    string  receives_to_chain = 7;
    string  sends_from_address = 8;
    string  receives_to_address =9;
    string  sends_unit = 10;
    string  receives_unit = 11;
    string  double_hashed_bc_address = 12;
    string  collateralized_nrg = 13;
    string  original_nrg = 14;
    string  nrg_unit = 15;
    string  tx_hash = 16;
    uint32  tx_output_index = 17;
    bool    is_settled = 18;
    string  fixed_unit_fee = 19;
    uint32  base = 20;
}

message TakerOrderInfo {
    string  sends_from_address = 1;
    string  receives_to_address = 2;
    string  double_hashed_bc_address = 3;
    bool    is_settled = 4;
    string  tx_hash = 5;
    uint32  tx_output_index = 6;
    string  total_collateral = 7;
    uint64  trade_height = 8;
    uint64  timestamp = 9;
}

message MatchedOrderInfo {
    MakerOrderInfo maker = 1;
    TakerOrderInfo taker = 2;
    bool unlocked = 7;
}

message GetOpenOrdersResponse {
    repeated  MakerOrderInfo orders = 1;
}

message GetMatchedOrdersResponse {
    repeated MatchedOrderInfo orders = 1;
}

message GetHistoricalOrdersResponse {
    repeated MatchedOrderInfo orders = 1;
    uint64 next_block = 2;
}

message TakerOrder {
    string  sends_from_address = 1;
    string  receives_to_address = 2;
    string  maker_tx_hash = 3;
    uint32  maker_tx_output_index = 4;
    string  collateralized_nrg = 5;
}

message GetBlake2blRequest {
    string to_be_hashed = 1;
    uint32 times = 2;
}

message GetBlake2blResponse {
    string hash = 1;
}

message VanityConvertRequest {
    string vanity = 1;
}

message VanityConvertResponse {
    string bc_address= 1;
    string error = 2;
}

message GetRoveredBlockHashRequest {
    string blockchain = 1;
    string hash = 2;
}

message GetRoveredBlockHeightRequest {
    string blockchain = 1;
    uint32 height = 2;
}

message GetBlockHashRequest {
    string hash = 1;
}

message GetBlockHeightRequest {
    uint32 height = 1;
}

message GetBlocksRequest {
    uint32 start_height = 1;
    uint32 end_height = 2;
}

message GetBlocksResponse {
    repeated core.BcBlock blocks = 1;
}

message GetRoveredBlocksRequest {
    string blockchain = 1;
    uint32 start_height = 2;
    uint32 end_height = 3;
}

message GetRawMempoolResponse {
    repeated core.Transaction transactions = 1;
}

message GetRoveredBlocksResponse {
    repeated core.Block blocks = 1;
}

message GetTxRequest {
    string hash = 1;
}

message GetMarkedTxRequest {
    string blockchain = 1;
    string hash = 2;
}

message GetOutPointRequest {
    string hash = 1;
    uint32 index = 2;
}

message GetTradeStatusResponse {
    uint32 status = 1;
}

message GetOutPointStatusResponse {
    bool unspent = 1;
}

message CurrentWork {
    string work = 1;
}

message SyncStatus {
    string status = 1;
}

message SettingsResponse {
    string ngrok_tunnel = 1;
    string build_version = 2;
}

message GetNrgSupplyResponse {
    string amount = 1;
}

message GetMarkedTxs {
    repeated core.MarkedTransaction txs = 1;
}


service Bc {

    rpc GetRoveredBlockHash(GetRoveredBlockHashRequest) returns (core.Block) {}
    rpc GetRoveredBlockHeight(GetRoveredBlockHeightRequest) returns (core.Block) {}
    rpc GetRoveredBlocks(GetRoveredBlocksRequest) returns (GetRoveredBlocksResponse) {}
    rpc GetLatestRoveredBlocks(core.Null) returns (GetRoveredBlocksResponse) {}
    rpc GetNrgSupply(core.Null) returns (GetNrgSupplyResponse) {}


    rpc GetBlockHash(GetBlockHashRequest) returns (core.BcBlock) {}
    rpc GetBlockHeight(GetBlockHeightRequest) returns (core.BcBlock) {}
    rpc GetBlocksHeight(GetBlockHeightRequest) returns (GetBlocksResponse) {}
    rpc GetBlocks(GetBlocksRequest) returns (GetBlocksResponse) {}
    rpc GetLatestBlock(core.Null) returns (core.BcBlock) {}
    rpc GetLatestUTXOBlock(core.Null) returns (core.BcBlock) {}

    rpc GetTx(GetTxRequest) returns (core.Transaction) {}
    rpc GetMarkedTx(GetMarkedTxRequest) returns (core.MarkedTransaction) {}
    rpc GetMarkedTxsForMatchedOrder(GetOutPointRequest) returns (GetMarkedTxs) {}


    rpc GetTradeStatus(GetOutPointRequest) returns (GetTradeStatusResponse) {}
    rpc GetOutpointStatus(GetOutPointRequest) returns (GetOutPointStatusResponse) {}
    rpc GetTxClaimedBy(GetOutPointRequest) returns (core.Transaction) {}

    rpc GetRawMempool(core.Null) returns (GetRawMempoolResponse) {}
    rpc GetBlockByTx(GetTxRequest) returns (core.BcBlock) {}
    rpc GetRoveredBlockForMarkedTx(GetMarkedTxRequest) returns (core.Block) {}

    rpc Help (core.Null) returns (HelpResponse) {}
    rpc Stats (core.Null) returns (StatsResponse) {}
    rpc GetSettings (core.Null) returns (SettingsResponse) {}
    rpc NewFeed (RpcFeedTransactionRequest) returns (RpcTransactionResponse) {}
    rpc UpdateFeed (RpcUpdateFeedTransactionRequest) returns (RpcTransactionResponse) {}
    rpc NewTx (RpcTransaction) returns (RpcTransactionResponse) {}
    rpc SendTx (core.Transaction) returns (RpcTransactionResponse) {}

    rpc GetEmbBalance (GetBalanceRequest) returns (GetEmbBalanceResponse) {}
    rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse) {}
    rpc GetWallet (GetBalanceRequest) returns (core.WalletData) {}
    rpc GetSpendableOutpoints(GetSpendableCollateralRequest) returns (core.WalletData) {}
    rpc GetSpendableCollateral (GetSpendableCollateralRequest) returns (GetSpendableCollateralResponse) {}
    rpc GetUnlockTakerTxParams (GetUnlockTakerTxParamsRequest) returns (GetUnlockTakerTxParamsResponse) {}

    rpc GetByteFeeMultiplier (core.Null) returns (GetByteFeeResponse) {}

    rpc GetTransfers (TransferRequest) returns (TransferResponse) {}

    rpc GetTakerForMaker (GetOutPointRequest) returns (GetOutPointRequest) {}
    rpc GetOpenOrder (GetOutPointRequest) returns (GetOpenOrdersResponse) {}
    rpc GetOpenCallbackOrder (GetOutPointRequest) returns (GetOpenOrdersResponse) {}
    rpc GetMatchedOrder (GetOutPointRequest) returns (GetMatchedOrdersResponse) {}
    rpc GetOpenOrders (GetSpendableCollateralRequest) returns (GetOpenOrdersResponse) {}
    rpc GetMatchedOrders (GetSpendableCollateralRequest) returns (GetMatchedOrdersResponse) {}
    rpc GetHistoricalOrders (GetHistoryRequest) returns (GetHistoricalOrdersResponse) {}

    rpc GetUnmatchedOrders (GetBalanceRequest) returns (GetOpenOrdersResponse) {}

    rpc GetUtxos (GetUtxosRequest) returns (core.Utxos) {}
    rpc GetUTXOLength (GetUtxoLengthRequest) returns (GetUtxoLengthResponse) {}
    rpc GetSTXOLength (GetUtxoLengthRequest) returns (GetUtxoLengthResponse) {}

    rpc GetBlake2bl (GetBlake2blRequest) returns (GetBlake2blResponse) {}
    rpc GetBcAddressViaVanity (VanityConvertRequest) returns (VanityConvertResponse) {}
    rpc GetCurrentWork (core.Null) returns (CurrentWork) {}
    rpc GetSyncStatus (core.Null) returns (SyncStatus) {}
    rpc GetFastSyncStatus (core.Null) returns (SyncStatus) {}
}
